5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1573_1331.log
== SUBMITION (2019-03-11 15:22:05) 
-- CODE:
print(//50%3)
-- EXECUTION TIME:
0.199822
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 1
    print(//50%3)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:23:01) 
-- CODE:
print(50//3%3)
-- EXECUTION TIME:
0.183672
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:24:00) 
-- CODE:
print(45//3)
print(50%3)
-- EXECUTION TIME:
0.190506
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:24:21) 
-- CODE:
print(//45/3)
print(50%3)
-- EXECUTION TIME:
0.173247
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 1
    print(//45/3)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:25:12) 
-- CODE:
print(//45/3//)
print(50%3)
-- EXECUTION TIME:
0.189715
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 1
    print(//45/3//)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:25:53) 
-- CODE:
print(45/3)
print(50%3)
-- OUTPUT:
15.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:26:55) 
-- CODE:
print(50/3)
print(50%3)
-- EXECUTION TIME:
0.17997
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:27:40) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.122323
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:14:40) 
-- CODE:
print(50//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:14:59) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.189973
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
